SERVER-55525 show warning in shell that it's deprecated